syntax = "proto3";

package gamedef;


// client->game
message EnterGameREQ
{
	
}

// game->client
message EnterGameACK
{
	
}